--- a/package.json
+++ b/package.json
@@ -26,6 +26,12 @@
     "unist",
     "util"
   ],
-  "dependencies": {},
-  "devDependencies": {}
+  "dependencies": {
+    "flatmap": "0.0.3"
+  },
+  "devDependencies": {
+    "tape": "^4.4.0",
+    "unist-builder": "^1.0.0",
+    "unist-util-select": "^1.3.0"
+  }
 }
