--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "util"
   ],
   "dependencies": {
-    "flatmap": "0.0.3"
+    "flatmap": "0.0.3",
+    "unist-util-is": "^1.0.0"
   },
   "devDependencies": {
     "tape": "^4.4.0",
