--- a/package.json
+++ b/package.json
@@ -29,11 +29,50 @@
     "unist-util-is": "^2.0.0"
   },
   "devDependencies": {
+    "nyc": "^12.0.1",
+    "prettier": "^1.13.3",
+    "remark-cli": "^5.0.0",
+    "remark-preset-wooorm": "^4.0.0",
     "tape": "^4.4.0",
     "unist-builder": "^1.0.0",
-    "unist-util-select": "^1.3.0"
+    "unist-util-select": "^1.3.0",
+    "xo": "^0.21.1"
   },
   "scripts": {
-    "test": "tape test/*.js"
+    "format": "remark . -qfo && prettier --write '**/*.js' && xo --fix",
+    "test-api": "node test",
+    "test-coverage": "nyc --reporter lcov tape test.js",
+    "test": "npm run format && npm run test-coverage"
+  },
+  "nyc": {
+    "check-coverage": true,
+    "lines": 100,
+    "functions": 100,
+    "branches": 100
+  },
+  "prettier": {
+    "tabWidth": 2,
+    "useTabs": false,
+    "singleQuote": true,
+    "bracketSpacing": false,
+    "semi": false,
+    "trailingComma": "none"
+  },
+  "xo": {
+    "prettier": true,
+    "esnext": false,
+    "rules": {
+      "guard-for-in": "off",
+      "no-var": "off",
+      "prefer-arrow-callback": "off"
+    },
+    "ignores": [
+      "unist-util-position.js"
+    ]
+  },
+  "remarkConfig": {
+    "plugins": [
+      "preset-wooorm"
+    ]
   }
 }
