--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "unist-util-filter",
   "version": "2.0.1",
-  "description": "Create a new unist tree with all nodes that pass the test implemented by the provided function",
+  "description": "unist utility to create a new tree with nodes that pass a filter",
   "license": "MIT",
   "keywords": [
+    "unist",
+    "unist-util",
+    "util",
+    "utility",
     "ast",
+    "tree",
+    "node",
     "clone",
     "filter",
     "immutable",
-    "node",
-    "test",
-    "tree",
-    "unist",
-    "util"
+    "test"
   ],
   "repository": "syntax-tree/unist-util-filter",
   "bugs": "https://github.com/syntax-tree/unist-util-filter/issues",
