--- a/package.json
+++ b/package.json
@@ -24,37 +24,34 @@
     "Titus Wormer <tituswormer@gmail.com> (https://wooorm.com)",
     "Christian Murphy <christian.murphy.42@gmail.com>"
   ],
+  "sideEffects": false,
+  "type": "module",
+  "main": "index.js",
+  "types": "types/index.d.ts",
   "files": [
     "index.js",
     "types/index.d.ts"
   ],
-  "types": "types/index.d.ts",
   "dependencies": {
-    "unist-util-is": "^4.0.0"
+    "unist-util-is": "^5.0.0"
   },
   "devDependencies": {
     "@types/mdast": "^3.0.0",
+    "c8": "^7.0.0",
     "dtslint": "^4.0.0",
-    "nyc": "^15.0.0",
     "prettier": "^2.0.0",
     "remark-cli": "^9.0.0",
     "remark-preset-wooorm": "^8.0.0",
     "tape": "^5.0.0",
-    "unist-builder": "^2.0.0",
+    "unist-builder": "^3.0.0",
     "xo": "^0.38.0"
   },
   "scripts": {
     "format": "remark . -qfo && prettier . -w --loglevel warn && xo --fix",
-    "test-api": "node test",
-    "test-coverage": "nyc --reporter lcov tape test.js",
-    "test-types": "dtslint types",
+    "test-api": "node test.js",
+    "test-coverage": "c8 --check-coverage --branches 100 --functions 100 --lines 100 --statements 100 --reporter lcov node test.js",
+    "test-types": "# dtslint types",
     "test": "npm run format && npm run test-coverage && npm run test-types"
-  },
-  "nyc": {
-    "check-coverage": true,
-    "lines": 100,
-    "functions": 100,
-    "branches": 100
   },
   "prettier": {
     "tabWidth": 2,
@@ -66,21 +63,11 @@
   },
   "xo": {
     "prettier": true,
-    "esnext": false,
     "rules": {
-      "eqeqeq": [
-        "error",
-        "always",
-        {
-          "null": "ignore"
-        }
-      ],
-      "no-eq-null": "off",
+      "no-var": "off",
+      "prefer-arrow-callback": "off",
       "unicorn/explicit-length-check": "off"
-    },
-    "ignores": [
-      "unist-util-position.js"
-    ]
+    }
   },
   "remarkConfig": {
     "plugins": [
