--- a/package.json
+++ b/package.json
@@ -68,12 +68,7 @@
     "trailingComma": "none"
   },
   "xo": {
-    "prettier": true,
-    "rules": {
-      "no-var": "off",
-      "prefer-arrow-callback": "off",
-      "unicorn/explicit-length-check": "off"
-    }
+    "prettier": true
   },
   "remarkConfig": {
     "plugins": [
