--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "emitDeclarationOnly": true,
     "allowSyntheticDefaultImports": true,
     "skipLibCheck": true,
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "strict": true
   }
 }
