Change types to base what is returned on `tree`
Previously, to define what `filter` returned could only be done through
a TypeScript type parameter:

```js
// This used to work but no longer!
const result = filter<Heading>(tree, 'heading')
expectType<Heading | null>(result)
```

This did not look at `tree` at all (even if `tree` was hast, and as `Heading` is
mdast, it would yield `Heading | null`).
It also made it impossible to narrow types in JS.

Given that more and more of unist and friends is now strongly typed, we can
expect `tree` to be some kind of implementation of `Node` rather than the
abstract `Node` interface itself.
This commit changes to perform the test (`'heading'`) in the type system
and actually narrow down whether the inpu value matches `tree` or not.

This gives us:

```js
// This now works:
const tree: Root = {/* … */}

const result1 = filter(tree, () => Math.random() > 0.5)
expectType<Root | null>(result1)

const result2 = filter(tree, 'heading')
expectType<null>(result2)

const result3 = filter(tree, 'root')
expectType<Root>(result2)
```

--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
   "main": "index.js",
   "types": "index.d.ts",
   "files": [
+    "complex-types.d.ts",
     "index.d.ts",
     "index.js"
   ],
   "dependencies": {
     "@types/unist": "^2.0.0",
-    "unist-util-is": "^5.0.0"
+    "unist-util-is": "^5.0.0",
+    "unist-util-visit-parents": "^5.0.0"
   },
   "devDependencies": {
     "@types/mdast": "^3.0.0",
@@ -53,7 +55,7 @@
   },
   "scripts": {
     "prepack": "npm run build && npm run format",
-    "build": "rimraf \"*.d.ts\" && tsc && tsd && type-coverage",
+    "build": "rimraf \"{index,test}.d.ts\" && tsc && tsd && type-coverage",
     "format": "remark . -qfo && prettier . -w --loglevel warn && xo --fix",
     "test-api": "node test.js",
     "test-coverage": "c8 --check-coverage --branches 100 --functions 100 --lines 100 --statements 100 --reporter lcov node test.js",
@@ -78,6 +80,11 @@
   "typeCoverage": {
     "atLeast": 100,
     "detail": true,
-    "strict": true
+    "strict": true,
+    "ignoreCatch": true,
+    "#": "needed `any`s",
+    "ignoreFiles": [
+      "complex-types.d.ts"
+    ]
   }
 }
