Refactor to move implementation to `lib/`

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "main": "index.js",
   "types": "index.d.ts",
   "files": [
+    "lib/",
     "complex-types.d.ts",
     "index.d.ts",
     "index.js"
