--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
   "types": "index.d.ts",
   "files": [
     "lib/",
-    "complex-types.d.ts",
     "index.d.ts",
     "index.js"
   ],
@@ -87,7 +86,7 @@
     "ignoreCatch": true,
     "#": "needed `any`s",
     "ignoreFiles": [
-      "complex-types.d.ts"
+      "lib/complex-types.d.ts"
     ]
   }
 }
